--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
 },
 "homepage": "https://github.com/daysite/Nixie-Bot",
 "author": {
-"name": "Daniel"
+"name": "daysite"
 },
 "repository": {
 "type": "git",
 "url": "git+https://github.com/daysite/Nixie-Bot.git"
 },
 "bugs": {
-"url": "https://github.com/DanielDiod/daysite/issues"
+"url": "https://github.com/daysite/Nixie-Bot/issues"
 },
 "license": "GPL-3.0-or-later",
 "dependencies": {
