--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"name": "Nixie Bot",
 	"version": "6.0.0",
 	"description": "Simple WhatsApp Bot Multi Device",
-	"main": "sunlight.js",
+	"main": "starlights.js",
 	"type": "module",
 	"directories": {
 		"lib": "lib",
 		"plugins": "plugins"
 	},
 	"scripts": {
-		"start": "node sunlight.js",
+		"start": "node starlights.js",
 		"test": "node test.js",
 		"test2": "nodemon index.js"
 	},
